--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -130,6 +130,58 @@ jobs:
         echo ""
         echo "All shell scripts passed ShellCheck"
 
+  todo-validation:
+    name: TODO.md Task Completion Validation
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Check for unverified task completions
+      run: |
+        # Compare TODO.md between base and head to find new [x] transitions
+        BASE="${{ github.event.pull_request.base.sha }}"
+        HEAD="${{ github.event.pull_request.head.sha }}"
+
+        # Get tasks that changed from [ ] to [x] in this PR
+        NEW_COMPLETIONS=$(diff <(git show "$BASE":TODO.md 2>/dev/null | grep -E '^\- \[ \] t[0-9]+' | grep -oE 't[0-9]+' | sort) \
+                               <(git show "$HEAD":TODO.md 2>/dev/null | grep -E '^\- \[x\] t[0-9]+' | grep -oE 't[0-9]+' | sort) \
+                          2>/dev/null | grep '^>' | sed 's/^> //' || true)
+
+        if [[ -z "$NEW_COMPLETIONS" ]]; then
+          echo "No new task completions in this PR"
+          exit 0
+        fi
+
+        echo "New task completions found:"
+        echo "$NEW_COMPLETIONS"
+        echo ""
+
+        WARNINGS=0
+        while IFS= read -r task_id; do
+          [[ -z "$task_id" ]] && continue
+          TASK_LINE=$(git show "$HEAD":TODO.md | grep -E "^\- \[x\] ${task_id} " | head -1 || true)
+
+          # Check for verified: field
+          if ! echo "$TASK_LINE" | grep -qE 'verified:[0-9]{4}-[0-9]{2}-[0-9]{2}'; then
+            echo "WARNING: $task_id marked [x] without verified: field"
+            WARNINGS=$((WARNINGS + 1))
+          else
+            echo "OK: $task_id has verified: field"
+          fi
+        done <<< "$NEW_COMPLETIONS"
+
+        if [[ "$WARNINGS" -gt 0 ]]; then
+          echo ""
+          echo "WARNING: $WARNINGS task(s) marked complete without verified: field."
+          echo "Add 'verified:YYYY-MM-DD' to confirm completion, or issue-sync will skip auto-closing the linked GitHub Issue."
+          echo "This is a warning only — the PR can still merge."
+        fi
+
   sonarcloud:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
