fix: address CodeRabbit review issues on t163 PR
- Fix inverted CI diff logic: use comm -12 for intersection instead of diff+grep
- Replace undefined log_verbose with log_warn in Phase 6
- Use state_log for verification tracking instead of nonexistent notes column
- Add --repo flag to gh pr view (extract repo slug from PR URL)
- Optimize Phase 6 to single DB query instead of N+1
- Distinguish verified vs force-closed in issue close comments
- Add verified: field as 4th completion rule in plans.md
- Add pointer to plans.md completion rules in AGENTS.md

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -148,9 +148,10 @@ jobs:
         HEAD="${{ github.event.pull_request.head.sha }}"
 
         # Get tasks that changed from [ ] to [x] in this PR
-        NEW_COMPLETIONS=$(diff <(git show "$BASE":TODO.md 2>/dev/null | grep -E '^\- \[ \] t[0-9]+' | grep -oE 't[0-9]+' | sort) \
-                               <(git show "$HEAD":TODO.md 2>/dev/null | grep -E '^\- \[x\] t[0-9]+' | grep -oE 't[0-9]+' | sort) \
-                          2>/dev/null | grep '^>' | sed 's/^> //' || true)
+        # comm -12 finds the intersection: IDs that were [ ] in BASE AND [x] in HEAD
+        BASE_OPEN=$(git show "$BASE":TODO.md 2>/dev/null | grep -E '^\- \[ \] t[0-9]+' | grep -oE 't[0-9]+' | sort || true)
+        HEAD_DONE=$(git show "$HEAD":TODO.md 2>/dev/null | grep -E '^\- \[x\] t[0-9]+' | grep -oE 't[0-9]+' | sort || true)
+        NEW_COMPLETIONS=$(comm -12 <(echo "$BASE_OPEN") <(echo "$HEAD_DONE") || true)
 
         if [[ -z "$NEW_COMPLETIONS" ]]; then
           echo "No new task completions in this PR"
