feat: rewrite opencode-aidevops plugin with actual SDK API (t008)
Rewrote the plugin from a compaction-only hook to a full-featured OpenCode
plugin using the actual @opencode-ai/plugin SDK (v1.1.56). The architecture
doc assumed APIs (agent.register, mcp.register, hook.register) that do not
exist — the real SDK uses a hooks-based return pattern.

New capabilities:
- config hook: dynamically loads 397 subagent definitions from ~/.aidevops/agents/
- tool registrations: aidevops CLI, memory recall/store, pre-edit-check
- tool.execute.before: ShellCheck gate for .sh file edits
- tool.execute.after: git operation logging for pattern tracking
- shell.env: injects AIDEVOPS_AGENTS_DIR, AIDEVOPS_WORKSPACE_DIR, scripts PATH
- experimental.session.compacting: improved with checkpoint state recovery

Zero runtime dependencies — uses built-in Node.js APIs and a lightweight
YAML frontmatter parser. No build step needed (ESM loaded directly).

--- a/.agents/plugins/opencode-aidevops/package.json
+++ b/.agents/plugins/opencode-aidevops/package.json
@@ -1,13 +1,16 @@
 {
   "name": "opencode-aidevops",
   "version": "1.0.0",
-  "description": "OpenCode plugin for aidevops - compaction context injection",
+  "description": "OpenCode plugin for aidevops — agent loading, quality hooks, CLI tools, compaction context",
   "main": "index.mjs",
   "type": "module",
-  "keywords": ["opencode", "plugin", "aidevops", "compaction"],
+  "keywords": ["opencode", "plugin", "aidevops", "devops", "agents", "compaction"],
   "author": "Marcus Quinn",
   "license": "MIT",
   "peerDependencies": {
-    "opencode-ai": ">=1.0.150"
+    "opencode-ai": ">=1.1.0"
+  },
+  "devDependencies": {
+    "@opencode-ai/plugin": "^1.1.56"
   }
 }
