feat: core plugin structure with TypeScript src layout (t008.1)
Converts opencode-aidevops plugin from single-file ESM to full TypeScript
project with modular architecture:

- src/index.ts: main plugin factory
- src/agents/loader.ts: agent scanner for ~/.aidevops/agents/
- src/config/schema.ts: Zod-validated configuration
- src/hooks/compaction.ts: session compaction context (ported from index.mjs)
- src/hooks/shell-env.ts: PATH and env var injection
- src/hooks/chat-context.ts: lightweight session-start context
- src/tools/aidevops-cli.ts: CLI and helper script tool registration
- src/types.d.ts: plugin type definitions

Chose modular src/ layout over monolithic file — matches design doc
architecture and enables independent testing of each component.

--- a/.agents/plugins/opencode-aidevops/package.json
+++ b/.agents/plugins/opencode-aidevops/package.json
@@ -1,12 +1,31 @@
 {
   "name": "opencode-aidevops",
-  "version": "1.0.0",
-  "description": "OpenCode plugin for aidevops - compaction context injection",
-  "main": "index.mjs",
+  "version": "2.0.0",
+  "description": "OpenCode plugin for aidevops - agent loader, compaction context, CLI tools",
+  "main": "dist/index.mjs",
   "type": "module",
-  "keywords": ["opencode", "plugin", "aidevops", "compaction"],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs"
+    }
+  },
+  "scripts": {
+    "build": "bun build src/index.ts --outdir dist --target bun --format esm --external zod --external gray-matter && cp src/types.d.ts dist/index.d.ts",
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf dist"
+  },
+  "keywords": ["opencode", "plugin", "aidevops", "devops", "agents", "compaction"],
   "author": "Marcus Quinn",
   "license": "MIT",
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "zod": "^3.24.4"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.0",
+    "typescript": "^5.8.3"
+  },
   "peerDependencies": {
     "opencode-ai": ">=1.0.150"
   }
