--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -40,7 +40,7 @@ sonar.cpd.exclusions=configs/**/*.txt,.agents/**/*.md,templates/**/*.md
 #
 # Individual file patterns were tried but 22 scripts don't match *-helper.sh/*-setup.sh/*-cli.sh
 # patterns. Maintaining per-file exclusions is unsustainable for a 70k+ line codebase.
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9,e10
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9,e10,e11,e12,e13
 
 # Ignore "npm install without --ignore-scripts" (shelldre:S6505) - all shell scripts
 # Required for CLI tool installation with native dependencies
@@ -56,6 +56,17 @@ sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.sh
 # All curl commands use HTTPS URLs, localhost, or verified official installers
 sonar.issue.ignore.multicriteria.e3.ruleKey=shelldre:S6506
 sonar.issue.ignore.multicriteria.e3.resourceKey=**/*.sh
+
+# SonarCloud uses both "shelldre:" and "shell:" rule prefixes for the same rules.
+# Duplicate the security hotspot exclusions under the "shell:" prefix to catch both.
+sonar.issue.ignore.multicriteria.e11.ruleKey=shell:S6505
+sonar.issue.ignore.multicriteria.e11.resourceKey=**/*.sh
+
+sonar.issue.ignore.multicriteria.e12.ruleKey=shell:S5332
+sonar.issue.ignore.multicriteria.e12.resourceKey=**/*.sh
+
+sonar.issue.ignore.multicriteria.e13.ruleKey=shell:S6506
+sonar.issue.ignore.multicriteria.e13.resourceKey=**/*.sh
 
 # Code smell exclusions for shell scripts
 # These are stylistic preferences that would require massive refactoring of 70k+ lines
