--- a/.agents/scripts/simplex-bot/package.json
+++ b/.agents/scripts/simplex-bot/package.json
@@ -11,10 +11,10 @@
     "test": "bun test"
   },
   "dependencies": {
-    "simplex-chat": "^6.0.0"
+    "simplex-chat": "^0.3.0"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "^1.3.0",
     "typescript": "^5.0.0"
   },
   "engines": {
