fix: address remaining PR #2301 review feedback — floating promise, grep pattern, type pinning

--- a/.agents/scripts/simplex-bot/package.json
+++ b/.agents/scripts/simplex-bot/package.json
@@ -14,7 +14,7 @@
     "simplex-chat": "^0.3.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.0",
+    "@types/bun": "~1.3.0",
     "typescript": "^5.0.0"
   },
   "engines": {
