--- a/.agents/scripts/simplex-bot/package.json
+++ b/.agents/scripts/simplex-bot/package.json
@@ -11,11 +11,11 @@
     "test": "bun test"
   },
   "dependencies": {
-    "simplex-chat": "^0.3.0"
+    "simplex-chat": "0.3.0"
   },
   "devDependencies": {
-    "@types/bun": "~1.3.0",
-    "typescript": "^5.0.0"
+    "@types/bun": "1.3.9",
+    "typescript": "5.9.3"
   },
   "engines": {
     "bun": ">=1.0.0"
