--- a/.github/workflows/issue-sync.yml
+++ b/.github/workflows/issue-sync.yml
@@ -423,7 +423,8 @@ jobs:
           TITLE=$(echo "$TITLE" | sed -E 's/^t[0-9]+(\.[0-9]+)*:\s*//')
 
           # Extract the conventional commit type (case-insensitive)
-          PREFIX=$(echo "$TITLE" | grep -oiE '^(feat|fix|docs|refactor|chore|perf|test|ci|build|style|hotfix|bugfix)[:(]' | tr -d ':(' | tr '[:upper:]' '[:lower:]' || true)
+          # Matches "feat:", "fix:", "Fix ", "Add ", etc. — colon or space after prefix
+          PREFIX=$(echo "$TITLE" | grep -oiE '^(feat|fix|docs|refactor|chore|perf|test|ci|build|style|hotfix|bugfix|add|update|enhance)[:(! ]' | sed 's/[:(! ]$//' | tr '[:upper:]' '[:lower:]' || true)
 
           if [[ -z "$PREFIX" ]]; then
             echo "No conventional commit prefix found in: $PR_TITLE"
@@ -432,16 +433,17 @@ jobs:
 
           # Map prefix to GitHub label
           case "$PREFIX" in
-            feat)     LABEL="enhancement" ;;
+            feat|add)          LABEL="enhancement" ;;
             fix|bugfix|hotfix) LABEL="bug" ;;
-            docs)     LABEL="documentation" ;;
-            refactor) LABEL="refactor" ;;
-            chore)    LABEL="chore" ;;
-            perf)     LABEL="performance" ;;
-            test)     LABEL="testing" ;;
-            ci|build) LABEL="ci" ;;
-            style)    LABEL="style" ;;
-            *)        LABEL="" ;;
+            docs)              LABEL="documentation" ;;
+            refactor)          LABEL="refactor" ;;
+            chore)             LABEL="chore" ;;
+            perf)              LABEL="performance" ;;
+            test)              LABEL="testing" ;;
+            ci|build)          LABEL="ci" ;;
+            style)             LABEL="style" ;;
+            update|enhance)    LABEL="enhancement" ;;
+            *)                 LABEL="" ;;
           esac
 
           if [[ -n "$LABEL" ]]; then
